<resources>
    <string name="app_name">DnDWiki</string>
    <string name="spell_finder">Search spells!</string>
    <string name="enter_spellname">Enter spell name</string>

    <string name="title_level">Level</string>
    <string name="title_casting_time">Casting Time</string>
    <string name="title_duration">Duration</string>
    <string name="title_damage_type">Type of Damage</string>
    <string name="title_school">School</string>
    <string name="title_dnd_classes">Classe</string>
    <string name="title_description">Description</string>

    <string name="title_home_fragment">Home</string>
    <string name="title_spell_finder_fragment">Find Spells</string>
    <string name="title_spell_detail_fragment">Details</string>
    <string name="none">none</string>
    <string name="dice_roller">Dice Roller</string>
    <string name="d_20">D 20</string>
    <string name="d_100">D 100</string>
    <string name="d_10">D 10</string>
    <string name="d_8">D 8</string>
    <string name="d_6">D 6</string>
    <string name="d_12">D 12</string>
    <string name="d_4">D 4</string>
</resources>