<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/dice_roller_d20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:contentDescription="@string/d_20"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/dice_roller_d20" />

        <ImageView
            android:id="@+id/dice_roller_d100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/regular_padding"
            android:clickable="true"
            android:contentDescription="@string/d_100"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dice_roller_d20"
            app:srcCompat="@drawable/dice_roller_d10_d100" />

        <ImageView
            android:id="@+id/dice_roller_d10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/d_10"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dice_roller_d100"
            app:layout_constraintTop_toBottomOf="@+id/dice_roller_d20"
            app:srcCompat="@drawable/dice_roller_d10_d100" />

        <ImageView
            android:id="@+id/dice_roller_d8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/regular_padding"
            android:clickable="true"
            android:contentDescription="@string/d_8"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dice_roller_d100"
            app:srcCompat="@drawable/dice_roller_d8" />

        <ImageView
            android:id="@+id/dice_roller_d6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:clickable="true"
            android:contentDescription="@string/d_6"
            android:focusable="true"
            app:layout_constraintStart_toEndOf="@+id/dice_roller_d8"
            app:layout_constraintTop_toBottomOf="@+id/dice_roller_d10"
            app:srcCompat="@drawable/dice_roller_d6" />

        <ImageView
            android:id="@+id/dice_roller_d12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:clickable="true"
            android:contentDescription="@string/d_12"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dice_roller_d8"
            app:srcCompat="@drawable/dice_roller_d12" />

        <ImageView
            android:id="@+id/dice_roller_d4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contentDescription="@string/d_4"
            android:focusable="true"
            app:layout_constraintStart_toEndOf="@+id/dice_roller_d12"
            app:layout_constraintTop_toBottomOf="@+id/dice_roller_d6"
            app:srcCompat="@drawable/dice_roller_d4" />

        <ImageView
            android:id="@+id/d20_count_button"
            android:layout_width="@dimen/dice_button_size"
            android:layout_height="@dimen/dice_button_size"
            android:src="@drawable/dice_button"
            app:layout_constraintBottom_toBottomOf="@+id/dice_roller_d20"
            app:layout_constraintEnd_toEndOf="@+id/dice_roller_d20"
            app:layout_constraintStart_toStartOf="@+id/dice_roller_d20"
            app:layout_constraintTop_toTopOf="@+id/dice_roller_d20"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/d20_count"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/large_font_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/large_font_size"
            app:layout_constraintEnd_toEndOf="@+id/d20_count_button"
            app:layout_constraintStart_toStartOf="@+id/d20_count_button"
            app:layout_constraintTop_toTopOf="@+id/d20_count_button"
            tools:text="20" />

        <ImageView
            android:id="@+id/d100_count_button"
            android:layout_width="@dimen/dice_button_size"
            android:layout_height="@dimen/dice_button_size"
            android:src="@drawable/dice_button"
            app:layout_constraintBottom_toBottomOf="@+id/dice_roller_d100"
            app:layout_constraintEnd_toEndOf="@+id/dice_roller_d100"
            app:layout_constraintStart_toStartOf="@+id/dice_roller_d100"
            app:layout_constraintTop_toTopOf="@+id/dice_roller_d100"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/d100_count"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/large_font_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/large_font_size"
            app:layout_constraintEnd_toEndOf="@+id/d100_count_button"
            app:layout_constraintStart_toStartOf="@+id/d100_count_button"
            app:layout_constraintTop_toTopOf="@+id/d100_count_button"
            tools:text="00" />

        <ImageView
            android:id="@+id/d10_count_button"
            android:layout_width="@dimen/dice_button_size"
            android:layout_height="@dimen/dice_button_size"
            android:src="@drawable/dice_button"
            app:layout_constraintBottom_toBottomOf="@+id/dice_roller_d10"
            app:layout_constraintEnd_toEndOf="@+id/dice_roller_d10"
            app:layout_constraintStart_toStartOf="@+id/dice_roller_d10"
            app:layout_constraintTop_toTopOf="@+id/dice_roller_d10"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/d10_count"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/large_font_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/large_font_size"
            app:layout_constraintEnd_toEndOf="@+id/d10_count_button"
            app:layout_constraintStart_toStartOf="@+id/d10_count_button"
            app:layout_constraintTop_toTopOf="@+id/d10_count_button"
            tools:text="10" />

        <ImageView
            android:id="@+id/d8_count_button"
            android:layout_width="@dimen/dice_button_size"
            android:layout_height="@dimen/dice_button_size"
            android:src="@drawable/dice_button"
            app:layout_constraintBottom_toBottomOf="@+id/dice_roller_d8"
            app:layout_constraintEnd_toEndOf="@+id/dice_roller_d8"
            app:layout_constraintStart_toStartOf="@+id/dice_roller_d8"
            app:layout_constraintTop_toTopOf="@+id/dice_roller_d8"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/d8_count"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/large_font_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/large_font_size"
            app:layout_constraintEnd_toEndOf="@+id/d8_count_button"
            app:layout_constraintStart_toStartOf="@+id/d8_count_button"
            app:layout_constraintTop_toTopOf="@+id/d8_count_button"
            tools:text="8" />

        <ImageView
            android:id="@+id/d6_count_button"
            android:layout_width="@dimen/dice_button_size"
            android:layout_height="@dimen/dice_button_size"
            android:src="@drawable/dice_button"
            app:layout_constraintBottom_toBottomOf="@+id/dice_roller_d6"
            app:layout_constraintEnd_toEndOf="@+id/dice_roller_d6"
            app:layout_constraintStart_toStartOf="@+id/dice_roller_d6"
            app:layout_constraintTop_toTopOf="@+id/dice_roller_d6"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/d6_count"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/large_font_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/large_font_size"
            app:layout_constraintEnd_toEndOf="@+id/d6_count_button"
            app:layout_constraintStart_toStartOf="@+id/d6_count_button"
            app:layout_constraintTop_toTopOf="@+id/d6_count_button"
            tools:text="6" />

        <ImageView
            android:id="@+id/d12_count_button"
            android:layout_width="@dimen/dice_button_size"
            android:layout_height="@dimen/dice_button_size"
            android:src="@drawable/dice_button"
            app:layout_constraintBottom_toBottomOf="@+id/dice_roller_d12"
            app:layout_constraintEnd_toEndOf="@+id/dice_roller_d12"
            app:layout_constraintStart_toStartOf="@+id/dice_roller_d12"
            app:layout_constraintTop_toTopOf="@+id/dice_roller_d12"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/d12_count"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/large_font_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/large_font_size"
            app:layout_constraintEnd_toEndOf="@+id/d12_count_button"
            app:layout_constraintStart_toStartOf="@+id/d12_count_button"
            app:layout_constraintTop_toTopOf="@+id/d12_count_button"
            tools:text="12" />

        <ImageView
            android:id="@+id/d4_count_button"
            android:layout_width="@dimen/dice_button_size"
            android:layout_height="@dimen/dice_button_size"
            android:src="@drawable/dice_button"
            app:layout_constraintBottom_toBottomOf="@+id/dice_roller_d4"
            app:layout_constraintEnd_toEndOf="@+id/dice_roller_d4"
            app:layout_constraintStart_toStartOf="@+id/dice_roller_d4"
            app:layout_constraintTop_toTopOf="@+id/dice_roller_d4"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/d4_count"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/large_font_margin"
            android:textColor="@color/white"
            android:textSize="@dimen/large_font_size"
            app:layout_constraintEnd_toEndOf="@+id/d4_count_button"
            app:layout_constraintStart_toStartOf="@+id/d4_count_button"
            app:layout_constraintTop_toTopOf="@+id/d4_count_button"
            tools:text="4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>